...
    <string name="editor_delete_image_description">Delete Image</string>
    <string name="editor_table_label">Table</string>
    <string name="editor_format_body">Body</string>
    <string name="table_column_handle_description">Column options</string>
    <string name="table_row_handle_description">Row options</string>
    <string name="table_options_handle_description">Table options</string>
    <string name="table_focused_cell_description">Focused table cell</string>
    <string name="table_column_options_title">Column Options</string>
    <string name="table_insert_column_left">Insert column left</string>
    <string name="table_insert_column_right">Insert column right</string>
    <string name="table_clear_column">Clear column</string>
    <string name="table_delete_column">Delete column</string>
    <string name="table_row_options_title">Row Options</string>
    <string name="table_insert_row_above">Insert row above</string>
    <string name="table_insert_row_below">Insert row below</string>
    <string name="table_clear_row">Clear row</string>
    <string name="table_delete_row">Delete row</string>
    <string name="table_options_title">Table Options</string>
    <string name="table_clear_entire">Clear entire table</string>
    <string name="table_duplicate">Duplicate table</string>
    <string name="table_fit_to_width">Fit to width</string>
    <string name="table_delete">Delete table</string>
    <string name="table_convert_bar_chart">Convert to Bar chart</string>
    <string name="table_convert_line_chart">Convert to Line chart</string>
    <string name="table_convert_pie_chart">Convert to Pie chart</string>
    <string name="editor_format_text_style">Aa</string>
    <string name="editor_mention_action">@</string>
    <string name="editor_underline_action">U</string>
...
